// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageContainer > renders correctly 1`] = `
<div data-v-3e1b6721="" class="py-10 px-8 vd-page-container d-flex justify-center">
  <v-sheet-stub data-v-3e1b6721="" width="1440" color="transparent" border="false" tile="false" tag="div"></v-sheet-stub>
</div>
`;

exports[`PageContainer > renders correctly with spacing class 1`] = `
<div data-v-3e1b6721="" class="ma-4 vd-page-container d-flex justify-center">
  <v-sheet-stub data-v-3e1b6721="" width="1440" color="transparent" border="false" tile="false" tag="div"></v-sheet-stub>
</div>
`;
